--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-Hello JP
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="utf-8">
+		<title>Aprendiendo WebApps three.js</title>		
+    <style>
+      #titulo {
+            position: absolute;
+            top: 10px;
+            width: 100%;
+            text-align: center;
+            color:rgb(250,250,250);
+            z-index: 100;
+            display:block;
+      }
+    </style>
+	</head>
+	<body>         
+    <!--Para colocar texto superpuesto-->    
+    <div id="titulo">Programacion Grafica</div>
+    <script src="three.js"></script>		
+   	<script src="cubo.js"></script>    
+	</body>
+</html>  
