--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<body>         
     <!--Para colocar texto superpuesto-->    
     <div id="titulo">Programacion Grafica</div>
-    <script src="three.js"></script>		
+    <script src="build/three.js"></script>		
    	<script src="cubo.js"></script>    
 	</body>
 </html>  
