--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
       }
     </style>
 	</head>
-	<body>         
+	<body> 
+		prueba
     <!--Para colocar texto superpuesto-->    
     <div id="titulo">Programacion Grafica</div>
     <script src="build/three.js"></script>		
-   	<script src="cubo.js"></script>    
+   	<!--<script src="cubo.js"></script>    -->
 	</body>
 </html>  
