--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     </style>
 	</head>
 	<body> 
-		prueba
+		prueba funciona
     <!--Para colocar texto superpuesto-->    
-    <div id="titulo">Programacion Grafica</div>
+    <!--<div id="titulo">Programacion Grafica</div>
     <!--<script src="/build/three.js"></script>		
    	<script src="cubo.js"></script>    -->
 	</body>
