--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 	<body> 
 		prueba funciona
     <!--Para colocar texto superpuesto-->    
-    <div id="titulo">Programacion Grafica</div>
-    <!--<script src="/build/three.js"></script>		
-   	<script src="cubo.js"></script>    -->
+    <!--<div id="titulo">Programacion Grafica</div>-->
+    <script src="//build//three.js"></script>		
+   <!--	<script src="cubo.js"></script>    -->
 	</body>
 </html>  
