--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 	</head>
 	<body> 
 		prueba funciona
-    <!--Para colocar texto superpuesto-->    
-    <!--<div id="titulo">Programacion Grafica</div>-->
-    <script src="//build//three.js"></script>		
-   <!--	<script src="cubo.js"></script>    -->
+    		<!--Para colocar texto superpuesto-->    
+    		<div id="titulo">Programacion Grafica</div>
+    		<script src="//build//three.js"></script>		
+   		<script src="cubo.js"></script>    
 	</body>
 </html>  
