--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		prueba funciona
     		<!--Para colocar texto superpuesto-->    
     		<div id="titulo">Programacion Grafica</div>
-    		<script src="//build//three.js"></script>		
+    		<script src="./build/three.js"></script>		
    		<script src="cubo.js"></script>    
 	</body>
 </html>  
