--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     		<!--Para colocar texto superpuesto-->    
     		<div id="titulo">Programacion Grafica</div>
     		<script src="/build/three.js"></script>		
-   		<script src="cubo.js"></script>    
+   		<!--<script src="cubo.js"></script>    -->
+		<script src="esferaLuz.js"></script>    
 	</body>
 </html>  
