--- a/prueba.html
+++ b/prueba.html
@@ -3,5 +3,8 @@
     </HEAD>
     <body>
            comemnzamos 
+           <p>
+            mañanma
+            <p>
     </body>        
 </HTML>
