--- a/prueba.html
+++ b/prueba.html
@@ -6,6 +6,6 @@
            <p>
             mañanma
             <p>
-            <a href="prueba">jp</a>
+            <a href="index.html">jp</a>
     </body>        
 </HTML>
