--- a/prueba.html
+++ b/prueba.html
@@ -1,11 +1,7 @@
 <HTML>
     <HEAD>
     </HEAD>
-    <body>
-           comemnzamos 
-           <p>
-            mañanma
-            <p>
-            <a href="index.html">jp</a>
+    <body>   
+            Hello World!!!        
     </body>        
 </HTML>
